--- a/Style.css
+++ b/Style.css
@@ -11,8 +11,7 @@ body{
 .header {
     padding-left: 120px;
     background-image: url(./IMG/TOPFON.jpg);
-    width: 1440px;
-    height: 1024px;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -25,8 +24,6 @@ body{
     line-height: normal;
     padding-bottom: 32px;
     display: flex;
-    width: 788.778px;
-    height: 125.007px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -53,8 +50,6 @@ body{
 .header__link_txt {
     border-radius: 30px;
     background: #9C0332;
-    width: 234.063px;
-    height: 48.603px;
     padding: 13px 74px 13px 74px;
     color: #FFF;
     font-size: 18px;
@@ -63,26 +58,31 @@ body{
     line-height: normal;
 }
 .Footer {
-    padding-left: 120px;
-    padding-top: 128px;
+
+
+    padding: 128px 120px 128px 120px;
     display: flex;
     gap: 32px;
-    width: 1440px;
-    height: 556px;
+    justify-content: space-evenly;
     background: #000915;
+
 }
+
 .Footer__game_1 {
+    background-image: url(./IMG/GAME1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     color: #FFF;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: 32px;
-    background-image: url(./IMG/GAME1.jpg);
-    width: 379px;
-    height: 300px;
     display: flex;
     align-items: flex-end;
     border-radius: 16px;
+    width: 379px;
+    height: 300px;
+
 }
 .Footer__game_2 {
     color: #FFF;
@@ -91,11 +91,13 @@ body{
     font-weight: 600;
     line-height: 32px;
     background-image: url(./IMG/GAME2.jpg);
-    width: 379px;
-    height: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     align-items: flex-end;
     border-radius: 16px;
+    width: 379px;
+    height: 300px;
 }
 .Footer__game_3 {
     color: #FFF;
@@ -104,9 +106,11 @@ body{
     font-weight: 600;
     line-height: 32px;
     background-image: url(./IMG/GAME3.jpg);
-    width: 379px;
-    height: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     align-items: flex-end;
     border-radius: 16px;
+    width: 379px;
+    height: 300px;
 }
