--- a/Style.scss
+++ b/Style.scss
@@ -37,7 +37,7 @@ body{
     line-height: 32px;
     margin-bottom: 44px;
 }
-.txt-mid_big {
+.header__txt-mid_big {
     color: #FFF;
     font-size: 18px;
     font-style: normal;
@@ -111,3 +111,4 @@ body{
     height: 300px;
 }
 
+@import "phone"
