--- a/Style.css
+++ b/Style.css
@@ -1,113 +1,176 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
+
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-body{
-    font-family: "Montserrat", sans-serif;
+
+body {
+  font-family: "Montserrat", sans-serif;
 }
+
 .header {
-    padding-left: 120px;
-    background-image: url(./IMG/TOPFON.jpg);
+  padding-left: 120px;
+  background-image: url(./IMG/TOPFON.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.header__txt-top {
+  padding-top: 217px;
+  color: #FFF;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.header__txt-mid {
+  width: 481px;
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+  margin-bottom: 44px;
+}
+
+.header__txt-mid_big {
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+.header__link {
+  margin-bottom: 506px;
+}
+
+.header__link_txt {
+  border-radius: 30px;
+  background: #9C0332;
+  padding: 13px 74px 13px 74px;
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.Footer {
+  padding: 128px 120px 128px 120px;
+  display: flex;
+  gap: 32px;
+  justify-content: space-evenly;
+  background: #000915;
+}
+
+.Footer__game_1 {
+  background-image: url(./IMG/GAME1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #FFF;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
+  display: flex;
+  align-items: flex-end;
+  border-radius: 16px;
+  width: 379px;
+  height: 300px;
+}
+
+.Footer__game_2 {
+  color: #FFF;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
+  background-image: url(./IMG/GAME2.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
+  border-radius: 16px;
+  width: 379px;
+  height: 300px;
+}
+
+.Footer__game_3 {
+  color: #FFF;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
+  background-image: url(./IMG/GAME3.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
+  border-radius: 16px;
+  width: 379px;
+  height: 300px;
+}
+
+@media (max-width: 767px) and (min-width: 320px) {
+  .header {
+    padding-left: 0;
+    background-image: url(./IMG/phone\ top.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-}
-.header__txt-top {
-    padding-top: 217px;
-    color: #FFF;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .header__txt-top {
+    text-align: center;
+    padding-top: 238px;
+    font-size: 32px;
     padding-bottom: 32px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     flex-shrink: 0;
-}
-.header__txt-mid {
-    width: 481px;
-    color: #FFF;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 32px;
-    margin-bottom: 44px;
-}
-.txt-mid_big {
-    color: #FFF;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-}
-.header__link {
-    margin-bottom: 506px;
-}
-.header__link_txt {
-    border-radius: 30px;
-    background: #9C0332;
-    padding: 13px 74px 13px 74px;
-    color: #FFF;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-.Footer {
-    padding: 128px 120px 128px 120px;
+    align-items: center;
+  }
+  .header__txt-mid {
+    width: 343px;
+    font-size: 14px;
+    line-height: 22px;
+    margin-bottom: 32px;
+    text-align: center;
+  }
+  .header__link {
+    padding-left: 54px;
+    padding-right: 54px;
+  }
+  .Footer {
     display: flex;
-    gap: 32px;
-    justify-content: space-evenly;
-    background: #000915;
-}
-.Footer__game_1 {
-    background-image: url(./IMG/GAME1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    color: #FFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 32px;
-    display: flex;
-    align-items: flex-end;
-    border-radius: 16px;
-    width: 379px;
+    flex-direction: column;
+    padding-top: 128px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 128px;
+  }
+  .Footer__game_1 {
+    width: 343px;
     height: 300px;
-
-}
-.Footer__game_2 {
-    color: #FFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 32px;
-    background-image: url(./IMG/GAME2.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    align-items: flex-end;
-    border-radius: 16px;
-    width: 379px;
+  }
+  .Footer__game_2 {
+    width: 343px;
     height: 300px;
-}
-.Footer__game_3 {
-    color: #FFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 32px;
-    background-image: url(./IMG/GAME3.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    align-items: flex-end;
-    border-radius: 16px;
-    width: 379px;
+  }
+  .Footer__game_3 {
+    width: 343px;
     height: 300px;
-}
-
+  }
+}/*# sourceMappingURL=Style.css.map */
